--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,18 @@
 name: Django-app workflow
+​
 on: [push]
+​
 jobs:
   tests:
     runs-on: ubuntu-latest
+​
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 
       uses: actions/setup-python@v2
       with:
         python-version: 3.7
+​
     - name: Install dependencies
       run: | 
         # обновление pip
@@ -17,6 +21,7 @@ jobs:
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
         # установка зависимостей
         pip install -r requirements.txt 
+​
     - name: Test with flake8 and django tests
       run: |
         # запуск проверки проекта по flake8
@@ -26,3 +31,26 @@ jobs:
         cd infra_project/
         # запустить написанные разработчиком тесты
         python manage.py test
+  build_and_push_to_docker_hub:
+      name: Push Docker image to Docker Hub
+      runs-on: ubuntu-latest
+      needs: tests
+      steps:
+        - name: Check out the repo
+          # Проверка доступности репозитория Docker Hub для workflow
+          uses: actions/checkout@v2 
+        - name: Set up Docker Buildx
+          # Вызов сборщика контейнеров docker
+          uses: docker/setup-buildx-action@v1 
+        - name: Login to Docker 
+          # Запуск скрипта авторизации на Docker Hub
+          uses: docker/andrew7567
+          with:
+            username: ${{ secrets.DOCKER_USERNAME }}
+            password: ${{ secrets.DOCKER_PASSWORD }}
+        - name: Push to Docker Hub
+          # Пуш образа в Docker Hub 
+          uses: docker/build-push-action@v2 
+          with:
+            push: true
+            tags: andrew7567/infra:latest
