--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
           uses: docker/setup-buildx-action@v1 
         - name: Login to Docker 
           # Запуск скрипта авторизации на Docker Hub
-          uses: docker/Login-action@v1
+          uses: docker/login-action@v1
           with:
             username: ${{ secrets.DOCKER_USERNAME }}
             password: ${{ secrets.DOCKER_PASSWORD }}
@@ -54,3 +54,19 @@ jobs:
           with:
             push: true
             tags: andrew7567/infra:latest
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build_and_push_to_docker_hub
+    steps:
+    - name: executing remote ssh commands to deploy
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST_ADRESS }}
+        username: ${{ secrets.USER }}
+        key: ${{ secrets.SSH_KEY }}
+        script: |
+          # Выполняет pull образа с DockerHub
+          sudo docker pull <имя-пользователя>/<имя-репозитория>
+          #остановка всех контейнеров
+          sudo docker stop $(sudo docker ps -a -q)
+          sudo docker run --rm -d -p 5000:5000 <имя-пользователя>/<имя-репозитория>
