--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,11 +61,10 @@ jobs:
     - name: executing remote ssh commands to deploy
       uses: appleboy/ssh-action@master
       with:
-        host: ${{ secrets.HOST_ADRESS }}
+        host: ${{ secrets.HOST }}
         username: ${{ secrets.USER }}
         key: ${{ secrets.SSH_KEY }}
         script: |
-          sudo /etc/init.d/docker start
           sudo docker pull ${{ secrets.USER }}/infra
           sudo docker stop $(sudo docker ps -a -q)
           sudo docker run --rm -d -p 5000:5000 ${{ secrets.USER }}/infra
