--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,6 +65,6 @@ jobs:
         username: ${{ secrets.USER }}
         key: ${{ secrets.SSH_KEY }}
         script: |
-          sudo docker pull ${{ secrets.USER }}/infra
+          sudo docker pull ${{ secrets.USER }}/infra:latest
           sudo docker stop $(sudo docker ps -a -q)
-          sudo docker run --rm -d -p 5000:5000 ${{ secrets.USER }}/infra
+          sudo docker run --rm -d -p 5000:5000 ${{ secrets.USER }}/infra:latest
